<resources>
    <string name="app_name">NTU-CS Repo</string>
    <string name="main_activity_title">NTU CS Repository</string>

    <!-- Main Menu-->
    <string name="action_settings">Settings</string>

    <!-- Main Activity -->
    <string name="choose_resources">Choose resources</string>
    <string name="resource_type_projects">Course Projects</string>
    <string name="resource_type_fyps">Final Year Projects</string>
    <string name="resource_type_pyps">PYP Solutions</string>
    <string name="resource_type_summaries">Summaries and Notes</string>
    <string name="view_resources_content_description">View resources</string>

    <!-- About Us -->
    <string name="title_activity_about_us">About Us</string>
    <string name="about_us_text">
        My name is Andyccs. I am the creator of this Android application.
        You can view this project in the GiHub repository by tapping the button below.
        All materials in this application are prepared by myself and reviewed by many open source
        contributors.
    </string>
    <string name="app_version" translatable="false">version 1.1</string>
    <string name="view_github_repository">View GitHub Repository</string>
    <string name="open_source_licenses">Open Source Licenses</string>

    <!-- Info -->
    <string name="getting_your_resources">Getting your resources</string>

    <!-- Error -->
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_resource_found">No resource found</string>
    <string name="try_again">Opss, we can\'t do this now, please try again.</string>
</resources>
