<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AboutUsActivity"
    tools:showIn="@layout/activity_about_us">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_splash_launcher"
        tools:ignore="ContentDescription"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/appName"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        style="@style/Base.TextAppearance.AppCompat.Title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_version"
        android:id="@+id/appVersion"
        android:layout_below="@+id/appName"
        android:layout_centerHorizontal="true"
        style="@style/Base.TextAppearance.AppCompat.Subhead"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_us_text"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/appVersion"
        android:layout_centerHorizontal="true"
        android:id="@+id/about_us_text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_github_repository"
        android:id="@+id/button_github"
        android:layout_below="@+id/about_us_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        style="@style/Base.Widget.AppCompat.Button.Colored"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_source_licenses"
        android:id="@+id/button_open_source"
        android:layout_below="@+id/button_github"
        android:layout_centerHorizontal="true"
        style="@style/Base.Widget.AppCompat.Button.Colored"/>
    </RelativeLayout>

</ScrollView>
